a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_mcilroy/invalid_type_one.min
var a: int;

a = 3.3;
a = b;
